objects/SLP_BulkReg__c.object
<CustomObject>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsWelcomeMessageReq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWelcomeMessageReq</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SLP_BulkReg</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SLP BulkReg</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{0000000000}</displayFormat>
        <label>SLP BulkReg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP BulkReg</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>